#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-47
2015-07-10 Mikhail S. Dubrovin	
- fixed compiler complains in method rotation_cs() for RHEL7 migration (PSAS-171)
	
Tag: V00-02-46
2015-07-27 Igor Gaponenko
- fixed two buges uncovered during RHEL7 migration (JIRA PSRT-63)

Tag: V00-02-45
2015-07-07 Mikhail S. Dubrovin	
- SegGeometryMatrixV1.h, GeometryAccess.h, CalibParsStore.h - fix doxygen documentation for parameter description.

Tag: V00-02-44
2015-05-22 Mikhail S. Dubrovin	
- CalibPars - add virtual method status. (for PSAS-139)
- CalibParsStore - prbits=40 -> 255
- GenericCalibPars - m_shape_cmode -> m_shape_cm, add implementation for method status, improve logic for size() and shape()
	
Tag: V00-02-43
2015-05-18 Mikhail S. Dubrovin	
- GenericCalibPars - change methods size() and shape() - return work even for non-loaded, but available constants (PSAS-148)
	
Tag: V00-02-42
2015-05-18 Mikhail S. Dubrovin	
- GenericCalibPars.cpp - improve memory management is destructor (PSAS-148)
	
Tag: V00-02-41
2015-05-12 Mikhail S. Dubrovin	
- GeometryObject.cpp - fix memory management in method evaluate_pixel_coords() (PSAS-147)
	
Tag: V00-02-40
2015-05-12 Mikhail S. Dubrovin	
- In SegGeometryStore.py use singletons for all sensor types SENS2X1:V1, EPIX100:V1, PNCCD:V1 (PSAS-147)
	
Tag: V00-02-39
2015-05-11 Mikhail S. Dubrovin	
- in GeometryObject - delete allocated memory for all non-top objects (PSAS-147).

Tag: V00-02-38
2015-05-11 Mikhail S. Dubrovin	
- In SegGeometryStore use SegGeometryCspad2x1V1 and SegGeometryEpix100V1 as singletons to reduce memory consumption (PSAS-147)
	
Tag: V00-02-37
2015-04-09 Mikhail S. Dubrovin	